add logout functionality

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: hamza911code
   jpa:
     hibernate:
-      ddl-auto: 'update'
+      ddl-auto: update
     show-sql: true
     properties:
       format_sql: true
